fix vertical alignment of submenu to header

--- a/style/verticalspacing.less
+++ b/style/verticalspacing.less
@@ -1,3 +1,5 @@
+@import "_flatstrap\variables.less";
+
 .vertical-space{
 	margin-top: 30px;
 }
@@ -16,6 +18,6 @@ p.content{
 	.vertical-space;
 }
 
-ul.nav-stacked{
-	margin-top: 21px;
+.match-header{
+	margin-top: @line-height-computed;
 }
